# govee

./: .gitignore  Cargo.toml  Cargo.toml.bak  LICENSE  README.md  govee-ambient.py  govee.py
docs/: 01-feature-gate-govee-lan.md  02-discovery-fixes.md  03-gui-async-and-clippy.md  04-audio-assert-fix.md
docs/superpowers/plans/: 2026-04-06-govee-gui.md  2026-04-06-terminal-ui.md
docs/superpowers/specs/: 2026-04-06-govee-gui-design.md  2026-04-06-terminal-ui-design.md
govee-cli/: Cargo.toml
govee-cli/src/: ambient.rs  audio_cmd.rs  cli.rs  dreamview.rs  main.rs  screen.rs  sunlight.rs  theme_loader.rs  themes.rs  ui.rs
govee-gui/: Cargo.toml
govee-gui/src/: app.rs  config.rs  main.rs  style.rs  subprocess.rs
govee-gui/src/pages/: ambient.rs  audio.rs  controls.rs  mod.rs  screen.rs  sunlight.rs  themes.rs
govee-gui/src/widgets/: mod.rs  sidebar.rs  slider_card.rs  status_bar.rs
govee-lan/: Cargo.toml
govee-lan/src/: audio.rs  colors.rs  discovery.rs  lib.rs  protocol.rs  theme_defs.rs  themes.rs  wayland.rs
govee-rs/: Cargo.toml
govee-rs/docs/superpowers/specs/: 2026-04-05-audio-reactive-design.md
govee-rs/src/: audio.rs  lib.rs  main.rs
govee-themes/: Cargo.toml
govee-themes/src/: lib.rs  theme_defs.rs  theme_loader.rs  themes.rs
src/: ambient.rs  audio.rs  audio_cmd.rs  cli.rs  colors.rs  discovery.rs  lib.rs  main.rs  protocol.rs  scenes.rs  screen.rs  theme_defs.rs  theme_loader.rs  themes.rs  ui.rs  wayland.rs
