[package]
name = "govee-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for controlling Govee LED strip lights over LAN"
license = "MIT"

[[bin]]
name = "govee"
path = "src/main.rs"

[dependencies]
govee-lan = { path = "../govee-lan" }
clap = { version = "4", features = ["derive"] }
inotify = "0.11"
nix = { version = "0.29", features = ["fs", "mman", "poll"] }
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.5.2"
colored = "2"
dirs = "6.0.0"
anyhow = "1.0.102"
toml = "0.8"
