[package]
name = "govee-lan"
version = "0.1.0"
edition = "2021"
description = "Control Govee LED strip lights over LAN — protocol library"
license = "MIT"

[features]
default = ["audio", "screen"]
audio = ["dep:libpulse-binding", "dep:rustfft", "dep:bytemuck"]
screen = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr", "dep:nix"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
libpulse-binding = { version = "2", optional = true }
rustfft = { version = "6", optional = true }
bytemuck = { version = "1.25.0", optional = true }
nix = { version = "0.29", features = ["fs", "mman", "poll"], optional = true }
